--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -13,6 +13,7 @@
             <input name="title" id="id_new_book" placeholder="Book's title" />
             <input name="current_page" id="id_current_page" placeholder="Current page" />
             <input name="total_pages" id="id_total_pages" placeholder="Total pages in a book" />
+            {% csrf_token %}
         </form>
         <button type="button">Save and see progress chart</button>
         <table id="id_book_table">
